// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`watch > compiles newly created files 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=NewFile, package=@rewatch-test/library]",
  "  full_build[module_count=5, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=NewFile, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`watch > handles file rename during watch 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=LibRenamed, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=LibRenamed, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "    build.compile_error",
]
`;

exports[`watch > ignores changes outside source dirs 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=WatchProbe, package=rewatch-test-fixture]",
  "  full_build[module_count=5, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=WatchProbe, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`watch > recovers from invalid config change 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  initialize_build",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`watch > removes artifacts when a source file is deleted 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=0]",
  "  full_build[module_count=3, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "    build.compile_error",
]
`;

exports[`watch > reports missing source folder without crashing 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`watch > triggers full rebuild on rescript.json change 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.res.mjs, module_system=esmodule]",
]
`;

exports[`watch > warnings persist across incremental builds 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
]
`;

exports[`watch > watches for file changes and rebuilds 1`] = `
[
  "rewatch.watch[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;
